# rtsp2webrtc

./: .cursorrules  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
src/: main.cpp  rtsp_reader.cpp  rtsp_reader.h  stream_manager.cpp  stream_manager.h  transcoder.cpp  transcoder.h  webrtc_session.cpp  webrtc_session.h
web/: index.html
